== 2.78.0
* Support `eci_indicator` for Transaction#sale with raw Apple Pay parameters

== 2.77.0
* Add `AuthorizationAdjustment` class and `authorization_adjustments` to Transaction
* Add document upload support
* Add Braintree::Dispute.find method
* Add Braintree::Dispute.search method
* Add Braintree::Dispute.accept method
* Add Braintree::Dispute.finalize method
* Add Braintree::Dispute.add_file_evidence method
* Add Braintree::Dispute.add_text_evidence method
* Add Braintree::Dispute.remove_evidence method
* Coinbase is no longer a supported payment method. `PaymentMethodNoLongerSupported` will be returned for Coinbase operations.
* Add Braintree::ApplePay for web domain registration
* Add facilitated details to Transaction if present

== 2.76.0
* Pass configured gateway to Merchant#_new instead of using global gateway (thanks @cwalsh!)

== 2.75.0
* Add support for additional PayPal options when vaulting a PayPal Order

== 2.74.0
* Add Visa Checkout support
* Add ConnectedMerchantStatusTransitioned and ConnectedMerchantPayPalStatusChanged Auth webhooks
* Add new properties to `CreditCardVerification` and `Customer`

== 2.73.0
* Bugfix: Add `unique_number_identifier` to Transaction::CreditCardDetails
* Updates to specs

== 2.72.0
* Remove `account_description` field from +UsBankAccount+ and +UsBankAccountDetails+

== 2.71.0
* Allow optional configuration of SSL version
* Add functionality to list all merchant accounts for a merchant with `merchant_account.all`

== 2.70.0
* Bugfix: Update UsBank tests to use legal routing numbers
* Add option +skip_advanced_fraud_check+ for transaction flows
* Add IdealPayment class with +sale+ and +find+ methods
* Add payer_status accessor to paypal_details object

== 2.69.1
* Bugfix: Allow PaymentMethod.find(token) to return +UsBankAccount+

== 2.69.0
* Add +default?+ support for +UsBankAccount+
* Add +ach_mandate+ data to +UsBankAccount+ and +UsBankAccountDetails+

== 2.68.2