@@ -2,14 +2,14 @@ module Braintree
   class RiskData # :nodoc:
     include BaseModule
 
-    attr_reader :id, :decision
+    attr_reader :id, :decision, :device_data_captured
 
     def initialize(attributes)
       set_instance_variables_from_hash attributes unless attributes.nil?
     end
 
     def inspect
-      attr_order = [:id, :decision]
+      attr_order = [:id, :decision, :device_data_captured]
       formatted_attrs = attr_order.map do |attr|
         "#{attr}: #{send(attr).inspect}"
       end
